segunda pre-entrega

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -89,6 +89,9 @@
             <li class="list__items">5) Potencia (^)</li>
             <li class="list__items">6) Factorial (!)</li>
             <li class="list__items">7) Calculadora de Numeros Primos</li>
+            <li class="list__items">8) Doble de un número</li>
+            <li class="list__items">9) Raiz de un número</li>
+            <li class="list__items">10) Valores exactos de π (Pi) y e (Euler)</li>
           </ul>
           <div class="button__text">
             <button
