--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hacé tus cálculos</title>
     <link rel="icon" type="image/jpg" href="./imagenes/calculadora.png" />
-    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
+    <title>Hacé tus cálculos.</title>
   </head>
   <body>
     <header>
@@ -61,53 +61,87 @@
         </nav>
       </nav>
     </header>
-    <main>
+    <main class="mt-5">
       <div class="container">
         <div class="row">
-          <h1 class="title text-center col-12 mt-3">SUPER CALCULADORA</h1>
+          <h1 class="title text-center col-12">CALCULADORA</h1>
           <h2 class="subtitle text-center col-12">
             Hacé todos tus cálculos del ámbito que necesites con esta
             Calculadora.
           </h2>
         </div>
       </div>
-      <div class="container">
-        <div class="row">
-          <h3>¿Cómo Funciona?</h3>
-          <p class="text">
-            Elegí por consola el número de la operación que quieras realizar.
-            Luego, ingresa la cantidad de números que quieras usar para la
-            operación (Algunas operaciones solo permiten dos o un número). Para
-            finalizar, ingresa los números y la operación será realizada
-            (Números aceptados: Racionales).
-          </p>
-          <ul class="list">
-            <li class="list__items">1) Suma (+)</li>
-            <li class="list__items">2) Resta (-)</li>
-            <li class="list__items">3) Multiplicación (*)</li>
-            <li class="list__items">4) División (/)</li>
-            <li class="list__items">5) Potencia (^)</li>
-            <li class="list__items">6) Factorial (!)</li>
-            <li class="list__items">7) Calculadora de Numeros Primos</li>
-            <li class="list__items">8) Doble de un número</li>
-            <li class="list__items">9) Raiz de un número</li>
-            <li class="list__items">10) Valores exactos de π (Pi) y e (Euler)</li>
-          </ul>
-          <div class="button__text">
-            <button
-              type="button"
-              class="btn btn-primary button__text"
-              onclick="calculadora()"
-            >
-              Comenzar
-            </button>
+      <div class="container mt-5">
+        <div class="calculator dark">
+          <div class="theme-toggler active">
+            <i class="toggler-icon"></i>
+          </div>
+          <div class="display-screen">
+            <div id="display"></div>
+          </div>
+          <div class="margin">
+            <table>
+              <tr>
+                <td>
+                  <button class="btn-operator bg-primary" id="reset">C</button>
+                </td>
+                <td>
+                  <button class="btn-operator bg-primary" id="/">
+                    &divide;
+                  </button>
+                </td>
+                <td>
+                  <button class="btn-operator bg-primary" id="*">
+                    &times;
+                  </button>
+                </td>
+                <td>
+                  <button class="btn-operator bg-primary" id="!">
+                    !
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td><button class="btn-number" id="7">7</button></td>
+                <td><button class="btn-number" id="8">8</button></td>
+                <td><button class="btn-number" id="9">9</button></td>
+                <td>
+                  <button class="btn-operator bg-primary" id="-">-</button>
+                </td>
+              </tr>
+              <tr>
+                <td><button class="btn-number" id="4">4</button></td>
+                <td><button class="btn-number" id="5">5</button></td>
+                <td><button class="btn-number" id="6">6</button></td>
+                <td>
+                  <button class="btn-operator bg-primary" id="+">+</button>
+                </td>
+              </tr>
+              <tr>
+                <td><button class="btn-number" id="1">1</button></td>
+                <td><button class="btn-number" id="2">2</button></td>
+                <td><button class="btn-number" id="3">3</button></td>
+                <td rowspan="2">
+                  <button class="btn-equal" id="equal">=</button>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <button class="btn-operator bg-primary" id="^">^</button>
+                </td>
+                <td><button class="btn-number" id="0">0</button></td>
+                <td>
+                  <button class="btn-operator bg-primary" id="√">√</button>
+                </td>
+              </tr>
+            </table>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <h3 class="text-center mt-3">Sobre Nosotros</h3>
-          <p class="text mt-3">
+          <h3 class="text-center mt-5">Sobre Nosotros</h3>
+          <p class="text text-center">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
             magnam maiores illum dolorum modi unde, autem dicta? Autem
             perferendis quod cupiditate delectus magnam. Voluptatibus natus
@@ -123,8 +157,8 @@
         </div>
       </div>
     </main>
-    <footer class="bg-primary text-center text-white">
-      <div class="container p-4 pb-0 margin__top">
+    <footer class="bg-primary text-center text-white mt-5">
+      <div class="container p-4 pb-0">
         <section class="mb-4">
           <a
             class="btn text-white btn-floating m-1"
