--- a/index.html
+++ b/index.html
@@ -127,15 +127,20 @@
                 </td>
               </tr>
               <tr>
-                <td colspan="2">
-                  <button id="cero" onclick="insertar('0')">0</button>
+                <td>
+                  <button onclick="insertar('0')">0</button>
                 </td>
                 <td>
                   <button class="bg-primary" onclick="insertar('.')">.</button>
                 </td>
+                <td><button class="bg-primary" id="percentage">%</button></td>
               </tr>
             </table>
           </div>
+        </div>
+        <div class="mt-3">
+          <p class="notas">*Nota:</p>
+          <p>- Cuando clickeas el porcentaje se calcula directamente. Tambien se puede calcular con algo más, por ejemplo: 10*(25%)</p>
         </div>
       </div>
       <div class="container p-3 mt-5 rounded">
