--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <td>
                   <button class="bg-primary" onclick="insertar('.')">.</button>
                 </td>
-                <td><button class="bg-primary" id="percentage">%</button></td>
+                <td><button class="bg-primary" onclick="calcularPorcentaje()">%</button></td>
               </tr>
             </table>
           </div>
